container/entrega-practicas-ordinaria/p1/ejercicio1/3-Tams/ejercicio.txt
Compila y ejecuta el código de cada uno de los ejemplos proporcionados y responde a las preguntas proporcionadas para ellos.

    main1.c
        ¿Por qué el primer printf() imprime valores distintos para ‘a’ con los modificadores %d y %c?
	>> Porque con %d está interpretando el número como un int y con %c como el código de un caracter ASCII

        ¿Cuánto ocupa un tipo de datos char?
	>> 1 byte

        ¿Por qué el valor de ‘a’ cambia tanto al incrementarlo en 6? (la respuesta está relacionada con la cuestión anterior)
       >> Porque se sale del rango de enteros de 4 bytes (-128 a 127) e interpreta el primer bit como el signo, por tanto -128
	>> (122) 01111010 --> 1000000 (-128)   

	 Si un “long” y un “double” ocupan lo mismo, ¿por qué hay 2 tipos de datos diferentes?
	>> Long es para enteros, double es para precision doble de punto flotante

    main2.c
        ¿Tenemos un problema de compilación o de ejecución?
       >> Sí:
	main2.c:13:5: error: variably modified ‘array2’ at file scope
	   13 | int array2[a];
	      |     ^~~~~~


	 ¿Por qué se da el problema?. Soluciónalo, compila y ejecuta de nuevo.
	>> El problema viene generado de declarar un array en función de una variable, tiene que ser declarado en función de algo constante en tiempo de compilación, como el macro ARRAY_SIZE.

        ¿Qué significa el modificar "%lu" en printf()?
	>> long long unsigned int

        ¿A qué dirección apunta "pc"? ¿Coincide con la de alguna variable anteriormente declarada? Si es así, ¿Coinciden los tamaños de ambas?
	>> PC está en 0x555555558068 y apunta a 0x555555558062, que es la posición de la variable 'x', sin embargo PC ocupa 8 bytes y 'x' ocupa 1.

        ¿Coincide el valor del tamaño de array1 con el número de elementos del array? ¿Por qué?
	>> Como son 10 ints por 4 bytes que ocupan cada uno, el array ocupa 40 bytes. Ambos arrays ocupan lo mismo.

        ¿Coinciden las direcciones a la que apunta str1 con la de str2?
	>> No, son dos tipos de variables distintas aunque contengan los mismos caracteres

        ¿Por qué los tamaños (según sizeof()) de str1 y str2 son diferentes?
        >> Porque *void, el tamaño de un puntero, es 8 bytes y 21 bytes es el tamaño total de los 21 caracteres del array de str2.
        >> Aquí entra en juego el tema de la degradación y diferencia entre un array y un puntero.
